walidacja po stronie serwera

--- a/public/CSS/Text.css
+++ b/public/CSS/Text.css
@@ -54,6 +54,6 @@ p{
     font-style: normal;
     font-size: larger;
     text-align: center;
-    color: white;
+    color: black;
     position: relative;
 }
