--- a/views/Subject View/SubjectsList.ejs
+++ b/views/Subject View/SubjectsList.ejs
@@ -31,7 +31,7 @@
             <% for(let subject of subjects) {%>
             <tr>
                 <td><%= subject.Name%></td>
-                <td><%= subject.ShortName%></td>
+                <td><%= subject.Shortname%></td>
                 <td><%= subject.Price%> PLN / h</td>
                 <td>
                     <svg height="25" width="25">
