--- a/views/pages/grade/form.ejs
+++ b/views/pages/grade/form.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/public/CSS/SubjectsList.css">
     <link rel="stylesheet" href="/public/CSS/LoginLayout.css">
     <link rel="stylesheet" href="/public/CSS/GradesList.css">
+    <link rel="stylesheet" href="/public/CSS/errors.css">
+    <title>Grades</title>
     <%-include('../../fragments/header')%>
     <h2><%= pageTitle%></h2>
 
@@ -16,56 +18,82 @@
             <form class="LoginForm" style="width: 100%" method="post" action="<%= formAction%>" novalidate onsubmit="return validateGradesForm();">
 
                 <input type="hidden" name="_id" value="<%= grades._id%>">
+                <label class="LoginLabel">Grade*</label>
                 <p></p>
-                <input class="TextField" type="number" name="Grade" id="grade" placeholder="Input grade" value="<%= grades.Grade%>"
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Grade')) ? '1px solid red' : ''%>" type="number" name="Grade" id="grade" placeholder="1 - 5 Decimal Value" value="<%= grades.Grade%>"
 
                         <%= (formMode == 'showDetails') ? 'disabled' : ''%> />
                 <p></p>
-                <span id="gradeError"></span>
+                <span id="gradeError">
+                    <% if(validationErrors.find(e => e.path.includes('Grade'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Grade')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-
-                <input class="TextField" type="date" name="Date" id="date" placeholder="Input Date"
+                <label class="LoginLabel">Date*</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Date')) ? '1px solid red' : ''%>" type="date" name="Date" id="date" placeholder="Input Date"
                 <% if(formMode === 'showDetails' || formMode === 'edit') {%>
-                       value="<%= grades.Date.toISOString().split('T')[0]%>"
+                       value="<%= new Date(grades.Date).toISOString().split('T')[0]%>"
                 <%} else {%>
                        value="<%= grades.Date%>"
                         <%}%>
                         <%= (formMode === 'showDetails') ? 'disabled' : '' %> />
                 <p></p>
-                <span id="dateError"></span>
+                <span id="dateError">
+                    <% if(validationErrors.find(e => e.path.includes('Date'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Date')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-                <input class="TextField" type="text" name="Comment" id="comment" value="<%= grades.Comment%>"
+                <label class="LoginLabel">Comment</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Comment')) ? '1px solid red' : ''%>" type="text" name="Comment" id="comment" value="<%= grades.Comment%>"
                         <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
                 <p></p>
-                <span id="commentError"></span>
+                <span id="commentError">
+                    <% if(validationErrors.find(e => e.path.includes('Comment'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Comment')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-
-                <select class="SelectField" id="student" name="std_id" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
-                    <option value="" selected>---Select Student---</option>
+                <label class="LoginLabel">Student*</label>
+                <p></p>
+                <select class="SelectField" style="border: <%= validationErrors.find(e => e.path.includes('std_id')) ? '1px solid red' : ''%>" id="student" name="std_id" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
+                    <option value="Select option" selected>Select option</option>
                     <% for (let i=0; i<allStd.length; i++) { let std = allStd[i]; %>
                     <option value="<%= std._id %>" label="<%= std.Name + ' ' + std.Surname + ' '+ std.PESEL%>"
                             <%= (grades._id && std._id.toString() == grades.student._id.toString()) ? 'selected' : '' %>><%= std.Name + ' ' + std.Surname + ' '+ std.PESEL%></option>
                     <%}%>
                 </select>
                 <p></p>
-                <span id="studentError"></span>
-
-                <select class="SelectField" id="subject" name="sub_id" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
-                    <option value="" selected>---Select Subject---</option>
+                <span id="studentError">
+                    <% if(validationErrors.find(e => e.path.includes('std_id'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('std_id')).message %>
+                    <%}%>
+                </span>
+                <p></p>
+                <label class="LoginLabel">Subject*</label>
+                <p></p>
+                <select class="SelectField" style="border: <%= validationErrors.find(e => e.path.includes('sub_id')) ? '1px solid red' : ''%>" id="subject" name="sub_id" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
+                    <option value="Select option" selected>Select option</option>
                     <% for (let i=0; i<allSbj.length; i++) { let sbj = allSbj[i]; %>
-
                     <option value="<%= sbj._id %>" label="<%= sbj.Name%>"
                             <%= (grades._id && sbj._id.toString() == grades.subject._id.toString()) ? 'selected' : '' %>><%= sbj.Name%></option>
                     <%}%>
                 </select>
                 <p></p>
-                <span id="subjectError"></span>
+                <span id="subjectError">
+                    <% if(validationErrors.find(e => e.path.includes('sub_id'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('sub_id')).message %>
+                    <%}%>
+                </span>
                 <div class="form-buttons">
                     <span id="errorSummary"></span>
                     <p></p>
                     <%if(formMode != 'showDetails') {%>
                     <input class="loginButton" type="submit" value="<%=btnLabel%>" />
-                    <a class="loginButton" href="/grades">Cancel</a>
+                    <a class="loginButton" style="text-decoration: none; text-align: center" href="/grades">Cancel</a>
                     <%} else {%>
                         <a class="loginButton" href="/grades">Back</a>
                     <%}%>
