--- a/views/pages/subject/form.ejs
+++ b/views/pages/subject/form.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/public/CSS/SubjectsList.css">
     <link rel="stylesheet" href="/public/CSS/LoginLayout.css">
     <link rel="stylesheet" href="/public/CSS/GradesList.css">
+    <link rel="stylesheet" href="/public/CSS/errors.css">
+    <title>Subjects</title>
     <%-include('../../fragments/header')%>
     <h2><%= pageTitle%></h2>
 
@@ -15,33 +17,63 @@
         <div class="subjectListMerger" style="width: 100%; height: auto; display: flex; overflow-x: scroll">
             <form class="LoginForm" style="width: 80%;" method="post" action="<%=formAction%>" novalidate onsubmit="return validateSubjectForm();">
                 <input type="hidden" name="_id" value="<%= subject._id%>">
-                <input class="TextField" type="text" name="Name" id="name" placeholder="Input name" value="<%= subject.Name%>"
+                <label class="LoginLabel">Name*</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Name')) ? '1px solid red' : ''%>" type="text" name="Name" id="name" placeholder="Input name" value="<%= subject.Name%>"
                         <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
                 <p></p>
-                <span id="nameError"></span>
+                <span id="nameError">
+                    <% if(validationErrors.find(e => e.path.includes('Name'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Name')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-                <input class="TextField" type="text" name="ShortName" id="shortName" placeholder="Input short name" value="<%= subject.ShortName%>"
+                <label class="LoginLabel">Short Name</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Shortname')) ? '1px solid red' : ''%>" type="text" name="Shortname" id="shortName" placeholder="Max 3" value="<%= subject.ShortName%>"
                         <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
                 <p></p>
-                <span id="shortNameError"></span>
+                <span id="shortNameError">
+                    <% if(validationErrors.find(e => e.path.includes('Shortname'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Shortname')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-                <input class="TextField" type="number" name="Price" id="Price" placeholder="Input price" value="<%= subject.Price%>"
+                <label class="LoginLabel">Price*</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Price')) ? '1px solid red' : ''%>" type="number" name="Price" id="Price" placeholder="Input price" value="<%= subject.Price%>"
                         <%= (formMode == 'showDetails') ? 'disabled' : ''%> />
                 <p></p>
-                <span id="PriceError"></span>
+                <span id="PriceError">
+                    <% if(validationErrors.find(e => e.path.includes('Price'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Price')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-                <select id="Availibility" name="Opened" class="SelectField" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
-                    <option value="<%= subject.Opened%>" selected><% if(subject.Opened == true) {%>Available<%} else {%> Unavailable <%}%></option>
+                <label class="LoginLabel">Availibility*</label>
+                <p></p>
+                <select id="Availibility" style="border: <%= validationErrors.find(e => e.path.includes('Opened')) ? '1px solid red' : ''%>" name="Opened" class="SelectField" required <%= (formMode == 'showDetails') ? 'disabled' : ''%> >
+                    <option value="<% if(subject.Opened == true) {%>true<%} else if (subject.Opened === false) {%>false<%}%>"><% if(subject.Opened == true) {%>Available<%} else if (subject.Opened === false) {%> Unavailable <%} else {%>Select option<%}%></option>
                     <option value="true">Available</option>
                     <option value="false">Unavailable</option>
                 </select>
                 <p></p>
-                <span id="AvailibilityError"></span>
+                <span id="AvailibilityError">
+                    <% if(validationErrors.find(e => e.path.includes('Opened'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Opened')).message %>
+                    <%}%>
+                </span>
                 <p></p>
-                <input class="TextField" type="text" name="Lecturer" id="lecturer" placeholder="Input lecturer" value="<%= subject.Lecturer%>"
+                <label class="LoginLabel">Lecturer*</label>
+                <p></p>
+                <input class="TextField" style="border: <%= validationErrors.find(e => e.path.includes('Lecturer')) ? '1px solid red' : ''%>" type="text" name="Lecturer" id="lecturer" placeholder="Input lecturer" value="<%= subject.Lecturer%>"
                         <%= (formMode == 'showDetails') ? 'disabled' : '' %> />
                 <p></p>
-                <span id="lecturerError"></span>
+                <span id="lecturerError">
+                    <% if(validationErrors.find(e => e.path.includes('Lecturer'))) {%>
+                        <%= validationErrors.find(e => e.path.includes('Lecturer')).message %>
+                    <%}%>
+                </span>
                 <% if (formMode == 'showDetails' || formMode == 'edit') {%>
                     <table class="gradesTable">
                         <thead>
@@ -74,7 +106,7 @@
                     <p></p>
                     <% if(formMode != 'showDetails') {%>
                     <input class="loginButton" type="submit" value="<%=btnLabel%>" />
-                    <a class="loginButton" href="/subjects">Cancel</a>
+                    <a class="loginButton" style="text-decoration: none; text-align: center;" href="/subjects">Cancel</a>
                     <%} else {%>
                         <a class="loginButton" href="/subjects">Back</a>
                     <%}%>
