--- a/views/pages/student/form.ejs
+++ b/views/pages/student/form.ejs
@@ -89,7 +89,7 @@
                     <%}%>
                 </span>
                 <p></p>
-                <% if (formMode === 'showDetails' || formMode === 'edit') {%>
+                <% if (formMode === 'showDetails') {%>
                     <table class="gradesTable">
                         <thead>
                         <tr>
